--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "type": "module",
   "name": "hyper-wlight-drifter",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "@types/jquery": "^3.5.30",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^5.4.9"
   }
 }
